<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.budgeit10.incomePage">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"
        android:text="INCOME"
        android:textSize="36dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:paddingTop="16dp"
            android:text="Per Year      $ "
            android:textSize="24dp" />

        <EditText
            android:id="@+id/perYearAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/per_year"
            android:inputType="phone"
            android:paddingLeft="16dp"
            android:paddingRight="16dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:paddingTop="16dp"
            android:text="Per Month  $"
            android:textSize="24dp" />

        <EditText
            android:id="@+id/perMonthAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/per_month"
            android:inputType="phone"
            android:paddingLeft="16dp"
            android:paddingRight="16dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:paddingTop="16dp"
            android:text="Per Week    $"
            android:textSize="24dp" />

        <EditText
            android:id="@+id/perWeekAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/per_week"
            android:inputType="phone"
            android:paddingLeft="16dp"
            android:paddingRight="16dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/totalButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Total per Month"
            android:background="#C8E6C9"
            android:textSize="16dp"
            android:padding="16dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/totalMonthlyIncome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/monthly_income"
            android:inputType="phone"
            android:paddingLeft="16dp"
            android:textSize="16dp"
            android:textStyle="bold" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/thirdNext"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_alignParentBottom="true"
            android:onClick="thirdNext"
            android:text="NEXT"
            android:background="#C8E6C9"
            android:textSize="34dp" />
    </RelativeLayout>
</LinearLayout>