<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.budgeit10.incomePage">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="MONTHLY EXPENSES"
        android:textSize="24dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/totalMonthlyIncome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:text="Enter Monthly Income"
            android:textSize="22dp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/monthlyIncome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/income_on_expenses"
            android:inputType="phone"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textSize="16dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#2E7D32" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="HOUSING"
            android:textSize="22dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/housingExpense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/housing"
            android:inputType="phone"
            android:paddingLeft="16dp"
            android:paddingRight="16dp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:paddingTop="16dp"
            android:text="FOOD"
            android:textSize="22dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/foodExpense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/food"
            android:inputType="phone"
            android:paddingLeft="16dp"
            android:paddingRight="16dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:paddingTop="16dp"
            android:text="TRANSPORTATION"
            android:textSize="22dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/transportExpense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/transport"
            android:inputType="phone"
            android:paddingLeft="16dp"
            android:paddingRight="16dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:paddingTop="16dp"
            android:text="EVERYTHING ELSE"
            android:textSize="22dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/otherExpense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/other"
            android:inputType="phone"
            android:paddingLeft="16dp"
            android:paddingRight="16dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#2E7D32" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="16dp">

        <Button
            android:id="@+id/expensesButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#C8E6C9"
            android:onClick="submitOrder"
            android:padding="16dp"
            android:text="TOTAL EXPENSES"
            android:textSize="16dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/totalMonthlyExpenses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/monthly_expenses"
            android:inputType="phone"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textSize="16dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="Extra $ : "
            android:textSize="24dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/extra_cash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Extra Cash"
            android:inputType="phone"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textSize="16dp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/fourthNext"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_alignParentBottom="true"
            android:background="#C8E6C9"
            android:onClick="fourthNext"
            android:text="NEXT"
            android:textSize="34dp">
        </Button>
    </RelativeLayout>


</LinearLayout>
